<?xml version="1.0"?>
<package format="2">
  <name>standard_vtol_ctrl</name>
  <version>0.0.0</version>
  <description>standard vtol ctrl package</description>

  <maintainer email="1604289397@qq.com">Ding Guo</maintainer>
  <author email="1604289397@qq.com">Ding Guo</author>
  <license>TODO</license>


  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>




  <export>

  </export>
</package>
